SERVER-8648 add explicit timeout to checkStatus connection